--- a/popup/index.html
+++ b/popup/index.html
@@ -5,7 +5,9 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div></div>
+	<input id="search" type="text" placeholder="Search for names">
+	<hr>
+	<div id="root"></div>
 	<script src="script.js"></script>
 </body>
 </html>
